--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -16,7 +16,9 @@
 .product_price{
     margin-top: 5px;
 }
-
+.product_rating{
+    display: flex;
+}
 .product > button{
  background: #f0c14b;
  border: 1px solid ;
