--- a/src/components/Checkout/Checkout.css
+++ b/src/components/Checkout/Checkout.css
@@ -1,16 +1,18 @@
-.checkout_ad{
-    width: 100%;
-    margin-bottom: 10px;
+.checkout_ad {
+  width: 100%;
+  margin-bottom: 10px;
 }
 
-.checkout{
-    display: flex;
-    padding: 20px;
-    background-color: white;
-    height: max-content;
+.checkout {
+  display: flex;
+  padding: 20px;
+  background-color: white;
+  height: max-content;
+  justify-content: center;
+  align-items: center;
 }
-.checkout_title{
-    margin-right:10px ;
-    padding: 10px;
-    border-bottom: 1px solid lightgray;
+.checkout_title {
+  margin-right: 10px;
+  padding: 10px;
+  border-bottom: 1px solid lightgray;
 }
